--- a/temp-site/index.html
+++ b/temp-site/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <!--
 	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Lastbid - Placeholder Website
+	Contact Me at bill.li.dev@gmail.com for any enquiries
 -->
 <html>
 	<head>
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/favicon.ico" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -25,13 +26,13 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1 id="days">00</h1>
+								<h1 id="days" class="hidden">0</h1>
 								<p>Days</p>
-								<h1 id="hours">00</h1>
+								<h1 id="hours" class="hidden">0</h1>
 								<p>Hours</p>
-								<h1 id="minutes">00</h1>
+								<h1 id="minutes" class="hidden">0</h1>
 								<p>Minutes</p>
-								<h1 id="seconds">00</h1>
+								<h1 id="seconds" class="hidden">0</h1>
 								<p>Seconds</p>
 							</div>
 						</div>
